fixing size on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -133,9 +133,9 @@
    overflow-y: scroll !important;
    @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
      padding-left: 10px;
-     margin-left: 10px;
+    //  margin-left: 10px;
      width: 90%;
-     height: 50%;
+     height: 60%;
    }
  }
  .fitpage {
